@@ -1,26 +1,0 @@
-# $Id$
-#
-# backoff-patterns -- Backoff patterns file for ike-scan
-#
-# Author: Roy Hills <Roy.Hills@nta-monitor.com>
-#
-# Format:
-# Implementation_Name<Tab>Backoff_Pattern
-#
-# Implementation_Name is a descriptive name for the IKE implementation
-# (and version if applicable).  Backoff_Pattern is the observed IKE
-# retransmission backoff pattern for this implementation.
-#
-# The backoff pattern is specified as a comma-seperated list of backoffs
-# in seconds.  The first number is always zero and represents the first
-# packet received.  For example, "0, 2, 2, 2" means that a total of four
-# packets are sent with a delay of two seconds between each one.
-#
-Firewall-1 4.1/NG	0, 2, 2, 2, 2, 2, 2, 4, 4, 4, 4, 4
-Firewall-1 4.0	0, 3, 3, 3, 3, 6, 6, 6, 6, 6, 6, 6
-Windows-2000	0, 1, 2, 4, 8, 16, 32
-Cisco VPN Concentrator	0, 8, 8
-Nortel Contivity	0, 16, 16, 16
-Linux FreeS/WAN	0, 10, 20
-Watchguard Firebox	0, 10, 10, 10, 10, 10
-Cisco IOS / PIX	0, 15, 15
